--- a/przychodnia/public/index.html
+++ b/przychodnia/public/index.html
@@ -32,7 +32,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Przychodnia Zbydniów - www.przychodniazbydniow.pl</title>
+    <meta
+      name="description"
+      content="Samodzielny Publiczny Gminny Zakład Opieki Zdrowotnej w Zaleszanach z/s w Zbydniowie."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
