--- a/przychodnia/public/index.html
+++ b/przychodnia/public/index.html
@@ -37,6 +37,20 @@
       name="description"
       content="Samodzielny Publiczny Gminny Zakład Opieki Zdrowotnej w Zaleszanach z/s w Zbydniowie."
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-BHNH1JZTP0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-BHNH1JZTP0");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
