--- a/przychodnia/public/index.html
+++ b/przychodnia/public/index.html
@@ -15,7 +15,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Samodzielny Publiczny Gminny Zakład Opieki Zdrowotnej w Zaleszanach z/s w Zbydniowie."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
