htm metatagi keywords

--- a/przychodnia/public/index.html
+++ b/przychodnia/public/index.html
@@ -17,6 +17,7 @@
       name="description"
       content="Samodzielny Publiczny Gminny Zakład Opieki Zdrowotnej w Zaleszanach z/s w Zbydniowie."
     />
+    <meta name="keywords" content="przychodnia zbydniow, przychodnia zaleszany, zbydniow, zaleszany, turbia, ośrodek zdrowia zaleszany, zaklad opieki zbydniow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
